--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,4 +37,15 @@ jobs:
           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
           docker push dinesh1097/netflixgithubaction:latest
         env:
-          DOCKER_CLI_ACI: 1 
+          DOCKER_CLI_ACI: 1      
+
+  deploy:
+    needs: build-analyze-scan
+    runs-on: [netflixgithubaction]
+    steps:
+      - name: Pull the docker image
+        run: docker pull dinesh1097/netflixgithubaction:latest
+      - name: Trivy image scan
+        run: trivy image dinesh1097/netflixgithubaction:latest
+      - name: Run the container netflix
+        run: docker run -d --name netflix -p 8081:80 dinesh1097/netflixgithubaction:latest    
